--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "psr-4": {"Kily\\Delivery\\Grastin\\Tests\\": "tests/Grastin/Tests"}
     },
     "require": {
-        "guzzlehttp/guzzle": "~6"
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8"
+        "phpunit/phpunit": "^8.1"
     }
 }
