--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="tests/Bootstrap.php"
-         colors="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         testSuiteLoaderClass="PHPUnit_Runner_StandardTestSuiteLoader">
+    colors="true"
+    processIsolation="false"
+    stopOnFailure="false"
+    convertErrorsToExceptions="true"
+    convertNoticesToExceptions="true"
+    convertWarningsToExceptions="true"
+    testSuiteLoaderFile="phpunit/src/Runner/StandardTestSuiteLoader.php">
     <php>
-        <!-- <server name="API_KEY" value="YOUR API HERE" /> -->
+        <!--<server name="API_KEY" value="YOUR_API_KEY" />-->
     </php>
     <testsuites>
-        <testsuite>
-            <directory>./tests/</directory>
+        <testsuite name="main">
+            <directory>tests/Grastin/Tests</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./src</directory>
+        </whitelist>
+    </filter>
+
+
 </phpunit>
